tests/ui/typeck/conversion/implicit_conversion_from_storage_array_ref.sol
//@compile-flags: -Ztypeck
// Solar rejects this (unlike solc)
contract C {
    int[10] x;
    int[] y;
    function f() public {
        y = x; //~ ERROR: mismatched types
    }
}
